Version 0.8.15  unreleased

   * Improve Cucumber JSON output by merging first and second pass results.

Version 0.8.14  17 Mar 2015

   * Improve support for publishing to a real Maven URL.

Version 0.8.13  16 Mar 2015

   * Add support for a real Maven repository URL so we can publish to Maven Central.

Version 0.8.12  01 Dec 2014

   * Update the devmode boot process to account for changes in GWT 2.7.0 relative to RC1.

Version 0.8.11  08 Nov 2014

   * Update CedarGwtOnGae to understand new GWT 2.7.0-rc1's -noSuperDevMode flag in dev mode.

Version 0.8.10  26 Sep 2014

   * Use %n rather than \n in TestSummary.groovy.
   * Catch number format exceptions when parsing server wait configuration.
   * Support custom formatters for Cucumber output.
   * Add configuration for memory and permgen space.
   * Add support for "analysis" like code metrics and coverage.
   * Support headless mode on Linux for the devmode server and Cucumber tests.
   * Implement a two-pass mode for Cucumber, where failed tests are automatically retried.

Version 0.8.9   11 Dec 2013

   * Add customized TestTask and modify CedarGaeOnGwt to allow configuration of heap for tests.
   * Explicitly set source and target compatibility to JavaVersion.VERSION_1_6, to be safe.

Version 0.8.8   28 Oct 2013

   * Work around problems with Java 1.6 and Selenium with JRuby, by forcing IPv4.

Version 0.8.7   27 Oct 2013

   * Change Cucumber so the very slow verify step is only done when running all tests.

Version 0.8.6   26 Oct 2013

   * Refactor a lot of GWT, test suite, and Cucumber stuff into cedarGwtGae and cedarCucumber.
   * Reindent all of the code with tabstop=4, which is consistent with my Eclipse formatting.
   * Make Javadoc functionality work properly on Linux, and normalize line endings to DOS CR/LF.
   * Fix typo when getting user input from console (just a missing space in the output).

Version 0.8.5   16 Sep 2013

    * Add "enabled" flag onto cedarLabel, so it's easier to turn off.
